# Board-of-Judges

./: .gitignore  BENCHMARK.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/agents/: judge-ai-computer-vision-cv-specialist.md  judge-ai-data-pipeline-etl-engineer.md  judge-ai-natural-language-processing-nlp-lead.md  judge-ai-neural-network-optimization-engineer.md  judge-ai-vector-database-rag-architect.md  judge-biz-agile-coach-scrum-master.md  judge-biz-corporate-sustainability-auditor.md  judge-biz-developer-experience-dx-engineer.md  judge-biz-engineering-manager-em.md  judge-biz-legal-intellectual-property-counsel.md  judge-biz-technical-documentation-content-lead.md  judge-crisis-incident-commander.md  judge-crisis-postmortem-root-cause-analyst.md  judge-domain-arvr-spatial-computing-architect.md  judge-domain-blockchain-smart-contract-auditor.md  judge-domain-ecommerce-logistical-strategist.md  judge-domain-edtech-pedagogical-consultant.md  judge-domain-fintech-compliance-payment-specialist.md  judge-domain-healthcare-systems-hipaahl7-expert.md  judge-domain-iot-hardware-interaction-specialist.md  judge-eng-api-strategy-governance-lead.md  judge-eng-concurrency-multithreading-specialist.md  judge-eng-embedded-systems-firmware-engineer.md  judge-eng-fullstack-generalist-critic.md  judge-eng-microservices-orchestration-expert.md  judge-eng-principal-systems-architect.md  judge-eng-systems-refactoring-strategist.md  judge-infra-cloud-infrastructure-architect.md  judge-infra-containerization-kubernetes-specialist.md  judge-infra-database-reliability-engineer-dbre.md  judge-infra-disaster-recovery-bcp-strategist.md  judge-infra-edge-computing-specialist.md  judge-infra-finops-cloud-cost-optimizer.md  judge-infra-network-architect-sdnvpc.md  judge-infra-platform-engineer-idp-specialist.md  judge-qa-chaos-engineering-specialist.md  judge-qa-qa-automation-architect-sdet.md  judge-qa-security-regression-tester.md  judge-qa-user-acceptance-testing-uat-coordinator.md  judge-sec-application-security-appsec-engineer.md  (+12 more)
.claude/agents/extended/: README.md  (+37 more)
.github/workflows/: ci.yaml  evals.yaml
adapters/: README.md
adapters/aider/: README.md
adapters/antigravity/: README.md
adapters/claude-code/: README.md
adapters/codex/: AGENTS.md  README.md
adapters/continue/: README.md  config.snippet.json
adapters/cursor/: .cursorrules  README.md  board-of-judges.mdc
adapters/gemini-cli/: README.md  skill.md
adapters/github-action/: action.yaml  run.sh
adapters/github-copilot-cli/: README.md  shell-init.sh
docs/: adapters.md  architecture.md  design.md  v2_plan.md
evals/: runner.py
scripts/: bootstrap_claude_judges.py
src/bojudges/: __init__.py
tests/: conftest.py  test_dispatcher.py  test_eval_harness.py  test_judge_registry.py  test_panel.py  test_router.py  test_schema.py  test_synthesizer.py  test_verifier.py
(+44 files in other folders)
