[project]
name = "bojudges"
version = "0.2.0a0"
description = "Tool-agnostic, tool-grounded, eval-backed panel code review. Runs in every major coding CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Board of Judges Contributors" }]
keywords = ["code-review", "static-analysis", "llm", "ai", "security", "claude", "gemini", "codex"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Security",
]

dependencies = [
  "pydantic>=2.9",
  "typer>=0.12",
  "rich>=13.7",
  "httpx>=0.27",
  "PyYAML>=6.0",
  "anthropic>=0.40.0",
]

[project.optional-dependencies]
google = ["google-genai>=0.3.0"]
openai = ["openai>=1.50.0"]
all = ["google-genai>=0.3.0", "openai>=1.50.0"]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "pytest-mock>=3.14",
  "ruff>=0.6",
  "mypy>=1.11",
  "types-PyYAML",
]

[project.scripts]
boj = "bojudges.cli.main:app"
bojudges = "bojudges.cli.main:app"

[project.urls]
Homepage = "https://github.com/yash-dev007/board-of-judges"
Repository = "https://github.com/yash-dev007/board-of-judges"
Issues = "https://github.com/yash-dev007/board-of-judges/issues"
Benchmarks = "https://github.com/yash-dev007/board-of-judges/blob/main/BENCHMARK.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bojudges"]

[tool.hatch.build.targets.sdist]
include = ["src/bojudges", "LICENSE", "README.md", "BENCHMARK.md"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --cov=bojudges --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: requires API keys or external tools",
  "slow: slow tests, excluded by default",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RET"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/bojudges/cli/main.py" = ["B008"]            # typer's Option(...) in default args is idiomatic
"src/bojudges/schema/verdict.py" = ["N801", "N815"]  # 'PASS' is a Verdict enum member, not a class name
"src/bojudges/tools/base.py" = ["N818"]         # ToolUnavailable uses the idiomatic -Unavailable suffix
"tests/*" = ["B017", "C408"]                    # pytest.raises(Exception) is fine in tests; dict() is readable
"evals/datasets/**/*.py" = ["ALL"]              # test fixtures — intentionally dirty

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unreachable = true
